trying to debug server, unsolved